[package]
name = "canvas_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
cssparser = "0.35.0"
cssparser-color = "0.3.0"
deno_core = "0.341.0"
deno_error = "0.5.6"
euclid = "0.22.11"
fontsan = { git = "https://github.com/servo/fontsan.git", rev = "8fbc406506cfd1f8ab60e625d1e926a0e72e1d8a" }
harfbuzz_rs = { git = "https://github.com/harfbuzz/harfbuzz_rs.git", rev = "30f0fec1744bb320ac554f9f62831b1ce1d2985d" }
hashlink = "0.10.0"
image = { version = "0.25.6", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
] }
itertools = "0.14.0"
lyon_geom = "1.0.6"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
png = "0.17.16"
raqote = { git = "https://github.com/0f-0b/raqote.git", rev = "a28779053baa6f574fb67f0cfc6fed8badbb397c", default-features = false }
strum_macros = "0.27.1"
svgtypes = "0.15.3"
thiserror = "2.0.12"
unicase = "2.8.1"
unicode-bidi = "0.3.18"

[dev-dependencies]
deno_console = "0.197.0"
deno_url = "0.197.0"
deno_web = "0.228.0"
deno_webidl = "0.197.0"
tokio = { version = "1.44.1", features = ["fs", "rt", "macros"] }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
